[package]
name = "echarts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.192.0"
handlebars = "4.3.7"
serde = "1.0.164"
serde_json = "1.0.99"
serde_v8 = "0.103.0"

[[example]]
name = "basic_line"
path = "examples/line/basic_line.rs"

[[example]]
name = "les_miserables"
path = "examples/graph/les_miserables.rs"

[[example]]
name = "from_left_to_right_tree"
path = "examples/tree/from_left_to_right_tree.rs"

[[example]]
name = "multiple_radar"
path = "examples/radar/multiple_radar.rs"

[[example]]
name = "node_align_left_sankey"
path = "examples/sankey/node_align_left_sankey.rs"

[[example]]
name = "drink_flavors"
path = "examples/sunburst/drink_flavors.rs"