[package]
name = "echarts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.194.0"
handlebars = "4.3.7"
serde = "1.0.164"
serde_json = "1.0.99"
serde_v8 = "0.105.0"

[[example]]
name = "bar_with_background"
path = "examples/bar/bar_with_background.rs"

[[example]]
name = "waterfall"
path = "examples/bar/waterfall.rs"

[[example]]
name = "tangential_polar_par"
path = "examples/bar/tangential_polar_bar.rs"

[[example]]
name = "stacked_column"
path = "examples/bar/stacked_column.rs"

[[example]]
name = "boxplot_light_velocity"
path = "examples/boxplot/boxplot_light_velocity.rs"

[[example]]
name = "multiple_categories"
path = "examples/boxplot/multiple_categories.rs"

[[example]]
name = "basic_candlestick"
path = "examples/candlestick/basic_candlestick.rs"

[[example]]
name = "multiple_funnels"
path = "examples/funnel/multiple_funnels.rs"

[[example]]
name = "gauge_barometer"
path = "examples/gauge/gauge_barometer.rs"

[[example]]
name = "hide_overlapped_label"
path = "examples/graph/hide_overlapped_label.rs"

[[example]]
name = "les_miserables"
path = "examples/graph/les_miserables.rs"

[[example]]
name = "heatmap_on_cartesian"
path = "examples/heatmap/heatmap_on_cartesian.rs"

[[example]]
name = "basic_line"
path = "examples/line/basic_line.rs"

[[example]]
name = "smoothed_line"
path = "examples/line/smoothed_line.rs"

[[example]]
name = "basic_area"
path = "examples/line/basic_area.rs"

[[example]]
name = "stacked_line"
path = "examples/line/stacked_line.rs"

[[example]]
name = "stacked_area"
path = "examples/line/stacked_area.rs"

[[example]]
name = "gradient_stacked_area"
path = "examples/line/gradient_stacked_area.rs"

[[example]]
name = "temperature_change_in_the_coming_week"
path = "examples/line/temperature_change_in_the_coming_week.rs"

[[example]]
name = "area_pieces"
path = "examples/line/area_pieces.rs"

[[example]]
name = "data_transform_filter"
path = "examples/line/data_transform_filter.rs"

[[example]]
name = "line_gradient"
path = "examples/line/line_gradient.rs"

[[example]]
name = "distribution_of_electricity"
path = "examples/line/distribution_of_electricity.rs"

[[example]]
name = "basic_parallel"
path = "examples/parallel/basic_parallel.rs"

[[example]]
name = "parallel_aqi"
path = "examples/parallel/parallel_aqi.rs"

[[example]]
name = "nightingale"
path = "examples/pie/nightingale.rs"

[[example]]
name = "multiple_radar"
path = "examples/radar/multiple_radar.rs"

[[example]]
name = "node_align_left_sankey"
path = "examples/sankey/node_align_left_sankey.rs"

[[example]]
name = "basic_scatter"
path = "examples/scatter/basic_scatter.rs"

[[example]]
name = "effect_scatter"
path = "examples/scatter/effect_scatter.rs"

[[example]]
name = "drink_flavors"
path = "examples/sunburst/drink_flavors.rs"

[[example]]
name = "theme_river_lastfm"
path = "examples/theme_river/theme_river_lastfm.rs"

[[example]]
name = "from_left_to_right_tree"
path = "examples/tree/from_left_to_right_tree.rs"

[[example]]
name = "disk_usage"
path = "examples/treemap/disk_usage.rs"