[package]
name = "charming"
description = "A visualization library for Rust"
version = "0.6.0"
edition = "2021"
authors = ["Yuankun Zhang <i@yuankun.me>"]
repository = "https://github.com/yuankunzhang/charming"
documentation = "https://github.com/yuankunzhang/charming"
keywords = ["echarts", "visualization", "chart", "plot"]
categories = ["visualization", "graphics"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
rust-version = "1.85"

[dependencies]
charming_macros = { path = "../charming_macros", version = "0.1" }
deno_core = { version = "0.354", optional = true }
handlebars = { version = "6.0", optional = true }
image = { version = "0.25", optional = true }
resvg = { version = "0.45", features = ["text"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = "1.0"
serde_v8 = { version = "0.263", optional = true }
serde_with = "3.11.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
charming-gallery = { path = "../gallery" }
resvg = "0.45"
test_each_file = "0.3.5"
chrono = "0.4.41"
pretty_assertions = "1.4.1"

[dependencies.web-sys]
version = "0.3.64"
optional = true
features = ["Window", "Document", "Element"]

[features]
default = ["html"]
html = ["handlebars"]
ssr = ["html", "deno_core", "serde_v8"]
ssr-raster = ["ssr", "resvg", "image"]
wasm = ["serde-wasm-bindgen", "wasm-bindgen", "web-sys", "js-sys"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
