[package]
name = "echarts"
description = "A visualization library for Rust"
version = "0.1.0"
edition = "2021"
authors = ["Yuankun Zhang <i@yuankun.me>"]
homepage = "https://github.com/yuankunzhang/echarts-rs"
documentation = "https://github.com/yuankunzhang/echarts-rs"
keywords = ["rust", "echarts", "visualization", "chart"]
categories = ["data-visualization", "graphics"]
license = "MIT/Apache-2.0"
readme = "../README.md"

[dependencies]
deno_core = "0.195.0"
gdk-pixbuf = "0.17.10"
handlebars = "4.3.7"
serde = "1.0.164"
serde_json = "1.0.99"
serde_v8 = "0.106.0"
