[package]
name = "charming-gallery"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
image = "0.24.6"
chrono = "0.4"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = "1.29.1"
charming = { path = "../charming", features = ["ssr"] }
serde_json = "1.0.99"
serde = "1.0.164"

[[bin]]
name = "gallery"
path = "src/gallery.rs"

[[bin]]
name = "generate_images"
path = "src/images.rs"