[package]
name = "dioxus-web-demo"
version = "0.1.0"
authors = ["Chanyub.Park <mrchypark@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["web"] }

charming = { path = "../../charming", features = ["wasm"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
